kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookshelf-deployment
  labels:
    app: bookshelf-app
  namespace: bookshelf-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bookshelf-app
  template:
    metadata:
      labels:
        app: bookshelf-app
    spec:
      containers:
        - name: bookshelf-app
          image: bookshelf-app:1.0.1
          ports:
            - containerPort: 8080
