kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bookshelf-service
  namespace: bookshelf-app
spec:
  selector:
    app: bookshelf-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
