kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookshelf-ingress
  namespace: bookshelf-app
spec:
  ingressClassName: nginx
  rules:
    - host: bookshelf.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookshelf-service
                port:
                  number: 80
